# hacktofuture4-D09

./: .env  .gitignore  AGENTS.md  CLAUDE.md  PROJECT.md  check_graph.py  graph_dump.json  nexus-rules.yml  ngrok.yml  package-lock.json  populate_neo4j.py  populate_neo4j_js.py  real_migration.py  real_migration_2.py  scratch_update.py  scratch_update_2.py  scratch_update_3.py  scratch_update_4.py  scratch_update_5.py  simulate_failure.py  simulate_js_failure.py  test_runner.py
.nexus/: config.json
Orchestrator/: README.md  pyproject.toml  verify_report.py
Orchestrator/src/nexus_x_orchestrator.egg-info/: PKG-INFO  requires.txt
Orchestrator/src/orchestrator/: __init__.py  llm.py  main.py  models.py  workflow.py
Orchestrator/src/orchestrator/agents/: __init__.py  external.py  reporting.py  roles.py  triage.py
Orchestrator/src/orchestrator/connectors/: __init__.py  adapters.py  mcp.py  registry.py
Orchestrator/src/orchestrator/services/: localization.py
Orchestrator/test-reports/: inc-999.md
backend/: .gitignore  main.py  test_cig.py  test_output.txt
cli/: CLAUDE.md  package-lock.json  package.json
frontend/: AGENTS.md  package-lock.json  package.json
reports/: ci-default-test-js-repo-1776261962.md  ci-default-test-repo-1776258040.md  ci-default-test-repo-1776258977.md  ci-default-test-repo-1776260790.md  ci-default-test-repo-1776262302.md
scripts/: nexus_ai_check.py
test-js-repo/: CLAUDE.md  broken_app.js  package-lock.json  package.json
test-repo/: AGENTS.md  CLAUDE.md  README.md  auth.py  broken_service.py  incident.json  main.py
(+55 files in other folders)
